Map charset name to charset atom, this fixes the charset name canonicalization problem (e.g "utf-8" vs "UTF-8"), bug 138638, r=rjc, sr=alecf.